--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "transactx",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
+    "install": "^0.13.0",
+    "js-sha3": "^0.9.3",
+    "jsonwebtoken": "^9.0.2",
+    "keccak": "^3.0.4",
+    "next": "14.2.7",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
+    "npm": "^10.8.3",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@types/sinon-chai": "^3.2.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.7",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.22.9",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
