--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tsparticles/all": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -20,6 +22,7 @@
     "js-sha3": "^0.9.3",
     "jsonwebtoken": "^9.0.2",
     "keccak": "^3.0.4",
+    "leaflet": "^1.9.4",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
@@ -27,8 +30,14 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.4.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.5"
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
+    "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
