--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-simple-typewriter": "^5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
